@@ -23,6 +23,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10573: use actual/expected consistently in unittest methods.
+  The order of the args of assertCountEqual is also changed.
+
 - Issue #9286: email.utils.parseaddr no longer concatenates blank-separated
   words in the local part of email addresses, thereby preserving the input.
 
